[metadata]
license_file = LICENSE


[bdist_wheel]
universal=1


[nosetests]
verbosity=1
with-coverage=1
cover-package=isbnlib
cover-branches=1
cover-min-percentage=90


[pep257]
ignore=D203


[flake8]
ignore=N806,E721,W503
exclude=*/test/*,*/_data/*
max-complexity=10


[doc8]
max-line-length=79
verbose=1


[yapf]
based_on_style = pep8
