[metadata]
license_file = LICENSE-LGPL-3.0-only.txt


[bdist_wheel]
universal=1


[nosetests]
verbosity=1
with-coverage=1
cover-package=isbnlib
cover-branches=1
cover-min-percentage=90


[flake8]
max-line-length = 88
extend-ignore = E203
ignore=C901,D105,D107,E126,E722,E741,I100,I101,I201,N802,N806,S001,W503
exclude=*/test/*,*/_data/*
max-complexity=11


[pep8]
ignore = E701,E70,E702,W503
max-line-length = 80



