[metadata]
license=LGPL v3
license_file=LICENSE-LGPL-3.0.txt
platforms=any
description=Extract, clean, transform, hyphenate and metadata for ISBNs (International Standard Book Number).
long_description=file: README.rst
keywords=ISBN, metadata, World_Catalogue, Google_Books, Wikipedia, Open_Library, BibTeX, EndNote, RefWorks, MSWord, opf, BibJSON
classifier=
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Text Processing :: General
    Topic :: Software Development :: Libraries :: Python Modules


[bdist_wheel]
universal=1

[tool:pytest]
addopts = --cov-config=setup.cfg
testpaths =
    isbnlib/test

[flake8]
max-line-length=88
exclude=*/test/*,*/_data/*
max-complexity=11
ignore=
    E501,
    W503,
    E203,
    D202,
    W504,
    C901,
    D105,
    D107,
    D204,
    E126,
    E722,
    E741,
    I100,
    I101,
    I201,
    N802,
    N806,
    S001,
    W503
extend-ignore=E203,S001


[pep8]
ignore=E701,E70,E702,W503
max-line-length=80


[coverage:run]
source = isbnlib
branch = True
#omit = */.virtualenvs/dev38/*,isbnlib/test/*
omit = isbnlib/test/*


[coverage:report]
fail_under = 90
show_missing = True
skip_covered = True
